# dfg-generator

./: .gitignore  INSTALL  LICENSE  README  README.md  install.py
examples/edge_detection/: main.c
lib/: CMakeLists.txt
lib/include/cad/: Config.h  LinkAllPasses.h  RegisterPasses.h  Support.h
lib/src/: CMakeLists.txt  RegisterPasses.cpp
lib/src/KernelAnalysis/: CMakeLists.txt  DetermineBitWidth.cpp  DetermineBitWidth.h  Dfg.cpp  Dfg.h  DfgGeneration.cpp  DfgGeneration.h  DfgPrinting.cpp  DfgPrinting.h
lib/src/TinyXML/: CMakeLists.txt  tinystr.cpp  tinyxml.cpp  tinyxmlerror.cpp  tinyxmlparser.cpp  xmltest.cpp
lib/src/Utils/: CMakeLists.txt  Config.cpp  Support.cpp
